small changes to KlantRol choices
